<resources>
    <string name="app_name">ConRep</string>
    <string name="map">Map</string>
    <string name="view_reports">View Reports</string>
    <string name="add_construction_site">Add Construction Site</string>
    <string name="title_activity_view_construction_site">ViewConstructionSite</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="file_report">File Report</string>
    <string name="add_task">Add Task</string>
    <string name="view_tasks">View Tasks</string>
    <string name="edit_site">Edit Construction Site</string>
    <string name="delete_site">Delete Construction Site</string>
    <string name="add_site">Add Construction Site</string>
    <string name="back_to_list">Back To List</string>
    <string name="delete_task">Delete Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="deadline">Deadline</string>
    <string name="status">Status</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_add_construction_site">Add Construction Site</string>
    <string name="name_title">Name</string>
    <string name="city_title">City</string>
    <string name="adress_title">Address</string>
    <string name="status_title">Status</string>
    <string name="overseer_title">Overseer</string>
    <string name="image_title">Image</string>
    <string name="Construction_site_list">Construction Sites</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_edit_construction_site">Edit Construction Site</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="overseer">Overseer</string>
    <string name="picture">Picture:</string>
    <string name="description">Description</string>
    <string name="hours">Hours</string>
    <string name="site">Site</string>
    <string name="edit_report">Edit Report</string>
    <string name="construction_site">Construction Site</string>
    <string name="search">Search</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="report_date">Report Date</string>
    <string name="tasks">Task</string>
    <string name="delete_report">Delete Report</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="error_empty_field">Cannot be Empty</string>
    <string name="confirm_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="delete_report_final">Report deleted</string>
    <string name="delete_site_final">Site deleted.</string>
    <string name="delete_task_final">Task deleted.</string>
    <string name="delete_site_error">Site could not be deleted</string>
    <string name="delete_report_error">Report could not be deleted</string>
    <string name="delete_task_error">Task could not be deleted</string>
    <string name="language">Language</string>
    <string name="conrep">ConRep</string>
    <string name="back_to_home">Back to Home</string>
    <string name="about_text">An App which can be used to file reports on construction Sites. \n\nThis App was made by two Students of Business Information technology in the 4th Semester.</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_lang">Languages</string>
    <string name="reportlist">Reports</string>
    <string name="show_on_map">Show on map</string>

    <string name="darkmode">Toggle Darkmode</string>
    <string name="languages">Choose app language</string>
    <string name="key_language">key_language</string>
    <string name="pref_language">pref_language</string>
    <string name="key_darkmode">key_darkmode</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="General">General</string>
    <string name="add_picture">Add picture</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Deutsch</item>
    </string-array>

    <string-array name="language_values_array">
        <item>EN</item>
        <item>DE</item>
    </string-array>
</resources>