<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--below line is to create preference category-->
    <PreferenceCategory android:title="@string/General">

        <!--in below line we are creating a list preference
            and we are adding default selected value in list for EN-->
        <ListPreference
            android:defaultValue="EN"
            android:dialogTitle="@string/languages"
            android:entries="@array/languages_array"
            android:entryValues="@array/language_values_array"
            android:key="@string/pref_language"
            android:title="@string/language" />

        <!--on below line we are creating a switch preference
            default value is use to set switch on or off
            key is use to set key
            title is use to add title to our switch-->
        <!--this switch preference option is to remind for a bed time-->
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/key_darkmode"
            android:title="@string/darkmode" />

    </PreferenceCategory>

</PreferenceScreen>
